# economics

./: .gitignore  LICENSE  README.md  requirements.txt
config/: setup.cfg
data/: CPI.csv  CPI_SF.csv  GDP.csv
notebooks/: 00get_data.ipynb  01CPI_EDA.ipynb
