[metadata]
name = economics
version = 0.1.0
author = <Neil Bardhan>
author_email = indraneil.bardhan@gmail.com
description = WIP
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = economics